fixed returning values

--- a/project_0_HW/game_v3.ipynb
+++ b/project_0_HW/game_v3.ipynb
@@ -40,7 +40,7 @@
     "        else:\n",
     "            break       \n",
     "\n",
-    "    return count, predict\n"
+    "    return count\n"
    ]
   }
  ],
